--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@total-typescript/tsconfig": "^1.0.4",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   }
