--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  // My code runs in the DOM:
+  "extends": "@total-typescript/tsconfig/tsc/dom/app", // For an app
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -21,5 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "exclude": ["src"]
 }
